fixed minor api usage issues.